style: fix alignment issues with checkbox/dropdown on vet header

--- a/src/style/admin.css
+++ b/src/style/admin.css
@@ -601,6 +601,10 @@
   height: 4rem;
   width: 4rem;
   margin-right: -0.5rem;
+  margin-left: auto;
+}
+
+.multi-status-dropdown + .nominee-checkbox-container {
   margin-left: 0.75rem;
 }
 
